--- a/index.html
+++ b/index.html
@@ -42,22 +42,20 @@
 			</article>
 			<!-- About -->
 			<article  id="about" class="block">
-				<div>
 					<div class="container-column">
-						<div>
+						<div id="container-photo">
 							<img src="images/Viv.jpg" id="portrait" alt="A picture of me" />
 						</div>
-						<div>
+						<div id="container-about">
 							<h1>A curiosity-driven Full-Stack Developer. </h1>
 							<p> 
 								I'm passionate about bringing both the technical and visual aspects of digital products to life. User experience, beautiful pixels and writing clean accessible, human code matters to me. 
 								
 								I have a BS in Economics from University of Missouri. 
 								
-								I'm happiest when I'm creating, learning, exploring and thinking about how to make things better. I'm a lifelong learner.</p>
+								I'm happiest when I'm creating, learning, exploring and thinking about how to make things better. </p>
 						</div>
 					</div>
-				</div>
 			</article>
 
 		<!-- Work -->
@@ -108,6 +106,42 @@
 							<i class="devicon-nodejs-plain colored"></i>
 						  	<p>Node.js</p>
 						</div>
+						<div class="icon-box">
+							<i class="devicon-express-original colored"></i>
+							<p>Express</p>
+						</div>
+						<div class="icon-box">
+							<i class="devicon-mongodb-plain colored"></i>
+							<p>MongoDB</p>
+						</div>
+						<div class="icon-box">
+							<i class="devicon-redux-original colored"></i>
+							<p>Redux</p>
+						</div>
+						<div class="icon-box">
+							<i class="devicon-bash-plain colored"></i>
+							<p>Bash</p>
+						</div>
+						<div class="icon-box">
+							<i class="devicon-bootstrap-plain colored"></i>
+							<p>Bootstrap</p>
+						</div>
+						<div class="icon-box">
+							<i class="devicon-tailwindcss-plain colored"></i>
+							<p>Tailwind</p>
+						</div>
+						<div class="icon-box">
+							<i class="devicon-figma-plain colored"></i>
+							<p>Figma</p>
+						</div>
+						<div class="icon-box">
+							<i class="devicon-trello-plain colored"></i>
+							<p>Trello</p>
+						</div>
+						<div class="icon-box">
+							<i class="devicon-jira-plain colored"></i>
+							<p>Jira</p>
+						</div>
 					</div>
 					<footer>
 						<h3>Currently working on:</h3>
@@ -126,44 +160,30 @@
 					<div class = "container-row">
 						<div>
 							<article>
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image"><img src="images/pic01.jpg" alt="image of Starbucks Clone" /></a>
+								<h3><a href="https://github.com/weixu1220/mod3final">Starbucks Clone</a></h3>
+								<p>Full MERN stack web App, with google places</p>
 							</article>
 						</div>
 						<div>
 							<article>
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/weixu1220/lol-project/blob/main/src/images/Screenshot1.png" class="image featured"><img src="images/pic02.jpg" alt="image of league of Legends Champion data" /></a>
+								<h3><a href="https://github.com/weixu1220/lol-project">League of Legends Champion Data</a></h3>
+								<p>Display League of Legends Champion data from an API </p>
 							</article>
 						</div>
 						<div>
 							<article>
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/weixu1220/project1-RPS/blob/main/images/Screenshot1.png" class="image featured"><img src="images/pic03.jpg" alt="image of Rock paper scissors game" /></a>
+								<h3><a href="https://github.com/weixu1220/project1-RPS">Rock paper scissors</a></h3>
+								<p>Vanilla HTML, CSS, Javascript mini game</p>
 							</article>
 						</div>
 						<div>
 							<article>
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div>
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div>
-							<article>
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/weixu1220/game-tic-tac-toe/blob/main/images/img1.png" class="image featured"><img src="images/pic03.jpg" alt="screen shot of Tic Tac Toe game" /></a>
+								<h3><a href="https://github.com/weixu1220/game-tic-tac-toe">Tic Tac Toe</a></h3>
+								<p>Vanilla HTML, CSS, Javascript mini game</p>
 							</article>
 						</div>
 					</div>
@@ -183,7 +203,7 @@
 							<h3></h3>
 							<ul class="social">
 								<li><a href="https://www.linkedin.com/in/vivian-rice-751869a9/">LinkedIn</a></li>
-								<li><a href="#">Github</a></li>
+								<li><a href="https://github.com/weixu1220">Github</a></li>
 							</ul>
 							<hr />
 						</div>
