images and links

--- a/index.html
+++ b/index.html
@@ -160,28 +160,28 @@
 					<div class = "container-row">
 						<div>
 							<article>
-								<a href="#" class="image"><img src="images/pic01.jpg" alt="image of Starbucks Clone" /></a>
+								<a href="https://starbucks-clone-frontend.onrender.com/" class="image"><img src="https://github.com/weixu1220/port/blob/main/images/Screenshot%202023-09-13%20091919.png" alt="image of Starbucks Clone" /></a>
 								<h3><a href="https://github.com/weixu1220/mod3final">Starbucks Clone</a></h3>
 								<p>Full MERN stack web App, with google places</p>
 							</article>
 						</div>
 						<div>
 							<article>
-								<a href="https://github.com/weixu1220/lol-project/blob/main/src/images/Screenshot1.png" class="image featured"><img src="images/pic02.jpg" alt="image of league of Legends Champion data" /></a>
+								<a href="https://astounding-starlight-b3e2f5.netlify.app/" class="image featured"><img src="https://github.com/weixu1220/lol-project/blob/main/src/images/Screenshot1.png" alt="image of league of Legends Champion data" /></a>
 								<h3><a href="https://github.com/weixu1220/lol-project">League of Legends Champion Data</a></h3>
 								<p>Display League of Legends Champion data from an API </p>
 							</article>
 						</div>
 						<div>
 							<article>
-								<a href="https://github.com/weixu1220/project1-RPS/blob/main/images/Screenshot1.png" class="image featured"><img src="images/pic03.jpg" alt="image of Rock paper scissors game" /></a>
+								<a href="https://weixu1220.github.io/project1-RPS/" class="image featured"><img src="https://github.com/weixu1220/project1-RPS/blob/main/images/Screenshot1.png" alt="image of Rock paper scissors game" /></a>
 								<h3><a href="https://github.com/weixu1220/project1-RPS">Rock paper scissors</a></h3>
 								<p>Vanilla HTML, CSS, Javascript mini game</p>
 							</article>
 						</div>
 						<div>
 							<article>
-								<a href="https://github.com/weixu1220/game-tic-tac-toe/blob/main/images/img1.png" class="image featured"><img src="images/pic03.jpg" alt="screen shot of Tic Tac Toe game" /></a>
+								<a href="https://weixu1220.github.io/game-tic-tac-toe/" class="image featured"><img src="https://github.com/weixu1220/game-tic-tac-toe/blob/main/images/img1.png" alt="screen shot of Tic Tac Toe game" /></a>
 								<h3><a href="https://github.com/weixu1220/game-tic-tac-toe">Tic Tac Toe</a></h3>
 								<p>Vanilla HTML, CSS, Javascript mini game</p>
 							</article>
